welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:20: error: identifier expected but '(' found.
  var c:Color = T.(0)  
                  ^